[package]
name = "dash_cache"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Contains multiple LRU cache implementations, including a sharded LRU cache implementation for concurrent performance, DashCache."
categories = ["caching", "concurrecny"]
keywords = ["lru", "cache", "sharding", "concurrency"]
repository = "https://github.com/khammersmith17/dash-cache"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
incremental = false
debug-assertions = false
overflow-checks = false
strip = "symbols"


[dependencies]
ahash = "0.8.12"
futures = "0.3.31"
num_cpus = "1.17.0"
thiserror = "2.0.17"
tokio = {version = "1.44", features = ["sync"]}


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand = "0.8"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "time"] }
lru = "0.16.2"

[[bench]]
name = "put_then_get_with_eviction"
harness = false

[[bench]]
name = "put_then_get_no_eviction"
harness = false

[[bench]]
name = "dash_cache_bench"
harness = false
